# Benchmarking-SCA-Tools

./: README.md
database/data1/: pom.xml
database/data2/: multiplex_groundtruth.json  single_groundtruth.json
database/data3/: README.md
database/data5/: LICENSE  README.md  update_groundtruth.py
database/data5/python/poetry/: groundtruth  pyproject.toml
database/data5/rust/cargo/: Cargo.toml
database/data6/: changefile.py
groundtruth/data1/: mp-00000000-groundtruth.csv  mp-00000001-groundtruth.csv  mp-00000010-groundtruth.csv  mp-00000011-groundtruth.csv  mp-00000100-groundtruth.csv  mp-00000111-groundtruth.csv  mp-00001001-groundtruth.csv  mp-00001011-groundtruth.csv  mp-00001100-groundtruth.csv  mp-00010000-groundtruth.csv  mp-00010001-groundtruth.csv  mp-00010011-groundtruth.csv  mp-00010100-groundtruth.csv  mp-00010101-groundtruth.csv  mp-00010111-groundtruth.csv  mp-00011011-groundtruth.csv  mp-00011101-groundtruth.csv  mp-00100001-groundtruth.csv  mp-00100010-groundtruth.csv  mp-00100011-groundtruth.csv  mp-00100110-groundtruth.csv  mp-00101001-groundtruth.csv  mp-00101010-groundtruth.csv  mp-00101101-groundtruth.csv  mp-00101110-groundtruth.csv  mp-00110100-groundtruth.csv  mp-00110101-groundtruth.csv  mp-00111010-groundtruth.csv  mp-00111100-groundtruth.csv  mp-00111111-groundtruth.csv  mp-01000010-groundtruth.csv  mp-01000101-groundtruth.csv  mp-01000110-groundtruth.csv  mp-01001011-groundtruth.csv  mp-01001100-groundtruth.csv  mp-01001101-groundtruth.csv  mp-01001111-groundtruth.csv  mp-01010000-groundtruth.csv  mp-01010010-groundtruth.csv  mp-01010100-groundtruth.csv  (+88 more)
groundtruth/data2/: ChronoEngine.dll-groundtruth.csv  TortoiseGitMerge.exe-groundtruth.csv  (+25 more)
(+1216 files in other folders)
